styles.css
body {
    font-family: Arial, sans-serif;
  }
  
  h1, h2 {
    color: #333;
  }
  
  #addForm, #reactionSection {
    margin-bottom: 20px;
  }
  
  input[type="text"], button {
    margin-right: 10px;
  }

  .content-box {
    border: 2px solid #ccc;
    border-radius: 10px;
    padding: 20px;
    background-color: aqua;
  }

  .reaction-container {
    display: flex;
    justify-content: space-around;
    margin-top: 20px;
  }
  
  .reaction {
    display: flex;
    align-self: center;
    
  }
  .reaction-group {
    display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
  
}
  .reaction-group>img{
    padding: 25px;
    transition: transform 0.3s ease;
  }

  .reaction-group>img:hover {
    transform: scale(1.2);
  }
  @keyframes image-click-animation {
    0% { transform: scale(1); }
    50% { transform: scale(1.2); }
    100% { transform: scale(1); }
  }
  
  img {
    cursor: pointer;
  }
  
  /* Apply animation on image click */
  .img-click-animation {
    animation: image-click-animation 0.3s ease;
  }
  
  

